# skillcontroller

./: 0318night.md  0319night.md  download_datasets.sh  findings.md  progress.md  pyproject.toml  task_plan.md
scripts/: analyze_stability.py  collect_data.py  download_models.sh  eval_sft.py  run_train_sft.sh  train_sft.py
src/config/: __init__.py  base_config.py
src/controller/: __init__.py  base.py
src/data_collection/: __init__.py  instrumented_grpo.py  recorder.py  stability.py
src/skill_bank/: __init__.py  bank.py  node.py
src/utils/: __init__.py  logger.py  seed.py
tests/: test_skill_bank.py  test_stability.py
